--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.ts",
+    "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "watch": "tsc -w"
   },
